# pdf_tool

./: .gitignore  LICENSE  MakeFile  README.md  config.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: tests.yml
pdf_toolkit/: __main__.py  cli.py  config.py  gui.py  merge.py  split.py
tests/: test_merge.py  test_split.py
